--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
         rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
+    <div class="p-2">
+        <form id="contryByPhone" action="phone_code.php" method="POST">
+            <input type="text" name="phone">
+            <button>Button</button>
+        </form>
+        <div>Result: <span id="result"></span></div>
+    </div>
 
+    <script>
+        document.querySelector("#contryByPhone").addEventListener('submit', function (e) {
+            e.preventDefault();
+            fetch ("phone_code.php", {
+                method: 'POST',
+                body: new FormData(this)
+            })
+            .then (responce => responce.text())
+            .then (responce => {
+                document.getElementById("result").innerHTML = responce;
+            })
+        });
+    </script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
