--- a/index.html
+++ b/index.html
@@ -4,34 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-        rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>Test Task</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="p-2">
-        <form id="contryByPhone" action="phone_code.php" method="POST">
-            <input type="text" name="phone">
-            <button>Button</button>
-        </form>
-        <div>Result: <span id="result"></span></div>
+<div class="container-fluid search-by-phone-number">
+    <div class="row w-100 mt-5">
+        <div class="d-flex justify-content-center">
+            <form id="contryByPhone" action="phone_code.php" method="POST">
+                <div class="input-group">
+                    <input type="search" class="form-control" id="phone" name="phone" placeholder="Enter a phone number"
+                           aria-label="Enter a phone number"
+                           aria-describedby="search-addon"/>
+                    <button type="submit" class="btn btn-outline-primary">search</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row w-100 pt-3">
+        <div class="d-flex justify-content-center"><b class="pe-3">Result:</b> <span id="result"></span></div>
     </div>
 
-    <script>
-        document.querySelector("#contryByPhone").addEventListener('submit', function (e) {
-            e.preventDefault();
-            fetch ("phone_code.php", {
-                method: 'POST',
-                body: new FormData(this)
-            })
-            .then (responce => responce.text())
-            .then (responce => {
-                document.getElementById("result").innerHTML = responce;
-            })
-        });
-    </script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</div>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script>
+  $(document).ready(function (params) {
+    $('#contryByPhone').submit(function (e) {
+      e.preventDefault()
+      $.post('/phone_code.php', {
+        phone: $('#phone').val()
+      }, function (response) {
+        console.log(response)
+        $('#result').text(response)
+      })
+    })
+  })
+</script>
 </body>
 </html>
