Done with one template block(responsive css)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
         <div class="d-flex justify-content-center"><b class="pe-3">Result:</b> <span id="result"></span></div>
     </div>
 </div>
+<div class="position-relative">
+    <picture>
+        <source srcset="image/banner-small.png" media="(max-width: 991px)">
+        <img class="img-fluid w-auto" src="image/banner-big.png" alt="">
+    </picture>
+    <div>
+        <div class="banner-modal position-absolute">
+            <div>
+                <h1>Fulfillment dla Twojego</h1>
+                <h1>e-Commerce</h1>
+            </div>
+            <div>
+                <li>Przyjęcie i magazynowanie produktów</li>
+                <li>Kompletacja i pakowanie</li>
+                <li>Obsługa zwrotów i reklamacji</li>
+                <li>Współpraca ze wszystkimi dostępnymi przewoźnikami</li>
+                <li>Integracja z Twoją platformą e-Commerce</li>
+            </div>
+            <button class="btn">Więcej</button>
+        </div>
+    </div>
+</div>
 <div id="popup" class="position-fixed bottom-0 end-0 p-2 mw-100" hidden style="z-index: 1">
     <div class="p-3 bg-warning">
         <div>
